test/library_error2.l1

@add_loadpath(loadpath()[0] + "/../test/libs");

evalk("@export(lalala);",
    @lambda(r) { r; },
    @lambda() {});

evalk("@import(lalala);",
    @lambda(r) { r; },
    @lambda() {});

evalk("@with_imports(recursive) {};",
    @lambda(r) { r; },
    @lambda() {});

